--- a/awake.html
+++ b/awake.html
@@ -4,6 +4,21 @@
     <title>deadLINE</title>
     <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
     <link rel="stylesheet" href="360style.css">
+    <style>
+        body {
+            animation: fadeInAnimation ease 4s;
+            animation-iteration-count: 1;
+            animation-fill-mode: forwards;
+            @keyframes fadeInAnimation {
+                0% {
+                    opacity: 0;
+                }
+                    100% {
+                    opacity: 1;
+                }        
+            }
+        }
+    </style>
   </head>
   <body>
         
