--- a/awake.html
+++ b/awake.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="360style.css">
     <style>
         body {
-            animation: fadeInAnimation ease 4s;
+            animation-name: fadeInAnimation ease 4s;
             animation-iteration-count: 1;
             animation-fill-mode: forwards;
             @keyframes fadeInAnimation {
