--- a/awake.html
+++ b/awake.html
@@ -21,7 +21,7 @@
     </style>
   </head>
   <body>
-        
+    <audio src="audio/awakening.mp3" autoplay="autoplay"></audio>    
     <three60>
         <a-scene xr-mode-ui="enabled: false">
             <a-sky src="./images/awakecarpet.jpg" rotation="0 -90 0"></a-sky>
