--- a/awake.html
+++ b/awake.html
@@ -19,9 +19,12 @@
             }
         }
     </style>
+    <script>window.onload = function() {
+        document.getElementById("awakening").play();
+    }</script>
   </head>
   <body>
-    <audio src="audio/awakening.mp3" autoplay="autoplay"></audio>    
+    <audio id=""awakening" src="audio/awakening.mp3"></audio>    
     <three60>
         <a-scene xr-mode-ui="enabled: false">
             <a-sky src="./images/awakecarpet.jpg" rotation="0 -90 0"></a-sky>
