--- a/awake.html
+++ b/awake.html
@@ -24,7 +24,7 @@
     }</script>
   </head>
   <body>
-    <audio id="awakening" src="audio/awakening.mp3"></audio>    
+    <audio id="awakening" src="audio/awakening.mp3" type="audio/mp3" autoplay="autoplay" loop="no"></audio>    
     <three60>
         <a-scene xr-mode-ui="enabled: false">
             <a-sky src="./images/awakecarpet.jpg" rotation="0 -90 0"></a-sky>
