--- a/awake.html
+++ b/awake.html
@@ -4,7 +4,7 @@
     <title>deadLINE</title>
     <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
     <link rel="stylesheet" href="360style.css">
-    <style>
+<!--    <style>
         body {
             animation-name: fadeInAnimation ease 4s;
             animation-iteration-count: 1;
@@ -18,13 +18,14 @@
                 }        
             }
         }
-    </style>
+    </style>>-->
     <script>window.onload = function() {
         document.getElementById("awakening").play();
     }</script>
   </head>
   <body>
-    <audio id="awakening" src="audio/awakening.mp3" type="audio/mp3" autoplay="autoplay"></audio>    
+    <audio id="awakening" src="audio/awakening.mp3" type="audio/mp3" autoplay="autoplay"></audio>
+    <div class="fadefromblack"></div>
     <three60>
         <a-scene xr-mode-ui="enabled: false">
             <a-sky src="./images/awakecarpet.jpg" rotation="0 -90 0"></a-sky>
