--- a/awake.html
+++ b/awake.html
@@ -2,6 +2,7 @@
 <html class=""a-fullscreen">
   <head>
     <title>deadLINE</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
     <link rel="stylesheet" href="360style.css">
   </head>
