--- a/lecture.html
+++ b/lecture.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <video id="lecture" autoplay="autoplay">
-        <source src="video/lecture.mp4" type="video/mp4">
+        <source src="video/lecture_blur.mp4" type="video/mp4">
         If you see this your browser does not support the video tag.  You will miss your deadLINE.
     </video>
     <script type="text/javascript">
