story pages being added

--- a/landing.html
+++ b/landing.html
@@ -10,7 +10,7 @@
   <body>
     <three60>
         <a-scene xr-mode-ui="enabled: false">
-            <a-sky src="./images/lectureUp.jpg" rotation="0 -90 0"></a-sky>
+            <a-sky src="./images/stairs11.jpg" rotation="0 -90 0"></a-sky>
 
             <div class="flexb">
                 <div class="menu">        
@@ -42,10 +42,8 @@
                             Lecture seats
                         </div>
                         <div class="descriptive" id="description">
-                            Everyone has gone, your laptop has gone, silence.  Why did they leave me?  Standing in the semi dark,
-                             the main lights off, it is hard to see properly but the stairs to your <a href="stairs7.html">east</a> go 
-                             <a href="stairs8.html">up</a> and <a href="stairs3.html">down</a>.  There are dark rows of seating all around
-                               and the side lighting makes everything look a bit eerie, especially the massive air conditioning ducts above your head.
+                            Your senses were not wrong!  The thing in the corner is moving towards you.  The clatter of seats and the oncoming rush of
+                            foul air and then unimaginable force, falling, falling into the dark a distant noise getting loader as everything goes black.
                         </div>
                     </div>
                     <div class="inventory">
@@ -54,6 +52,11 @@
                 </div>    
             </div> 
         </a-scene>
-    </three60>      
+    </three60>
+  <script>
+    setTimeout(function(){
+        window.location="awake.html";
+    }, 5000)
+  </script>   
   </body>
 </html>
