--- a/stairs7.html
+++ b/stairs7.html
@@ -10,11 +10,11 @@
   <body>
     <three60>
         <a-scene xr-mode-ui="enabled: false">
-            <a-sky src="./images/lectureUp.jpg" rotation="0 -90 0"></a-sky>
+            <a-sky src="./images/stairs7.jpg" rotation="0 -90 0"></a-sky>
 
             <div class="flexb">
                 <div class="menu">        
-                    <h3>Hamburger</h3>
+                    <h3>Hamburgericons8-hamburger-button-100.png</h3>
                 </div>
                 <div class="content">
                     <!--<div id="menu" style="position: fixed; top: 0; left:0; right: 0; background: rgba(30, 30, 30, 0.2); padding: 10px">-->
@@ -39,13 +39,13 @@
                     </div>
                     <div class="descriptive" id="info">
                         <div class="descriptive" id="title">
-                            Lecture seats
+                            Lecture stairs
                         </div>
                         <div class="descriptive" id="description">
-                            Everyone has gone, your laptop has gone, silence.  Why did they leave me?  Standing in the semi dark,
-                             the main lights off, it is hard to see properly but the stairs to your <a href="stairs7.html">east</a> go 
-                             <a href="stairs8.html">up</a> and <a href="stairs3.html">down</a>.  There are dark rows of seating all around
-                               and the side lighting makes everything look a bit eerie, especially the massive air conditioning ducts above your head.
+                            Fumbling your way from the seating you are standing on the offset lecture theatre stairs.  The
+                            further you get from the side lighting the dimmer it seems.  <a href="stairs3.html">Down</a> seems to be best lit. 
+                            <a href="stairs8.html">Up</a> and to the back seems to be much darker than it should be and was that the sound of a seat flipping up?
+                            You don't have enough light to see clearly into the rows on either side.
                         </div>
                     </div>
                     <div class="inventory">
