--- a/stairs11.html
+++ b/stairs11.html
@@ -10,7 +10,7 @@
   <body>
     <three60>
         <a-scene xr-mode-ui="enabled: false">
-            <a-sky src="./images/lectureUp.jpg" rotation="0 -90 0"></a-sky>
+            <a-sky src="./images/stairs11.jpg" rotation="0 -90 0"></a-sky>
 
             <div class="flexb">
                 <div class="menu">        
@@ -42,10 +42,10 @@
                             Lecture seats
                         </div>
                         <div class="descriptive" id="description">
-                            Everyone has gone, your laptop has gone, silence.  Why did they leave me?  Standing in the semi dark,
-                             the main lights off, it is hard to see properly but the stairs to your <a href="stairs7.html">east</a> go 
-                             <a href="stairs8.html">up</a> and <a href="stairs3.html">down</a>.  There are dark rows of seating all around
-                               and the side lighting makes everything look a bit eerie, especially the massive air conditioning ducts above your head.
+                            It is dark back there and there is definately something moving in the corner.  You feel the hairs 
+                            on your arms stand on end.  On the floor there is a piece of <a href="index.html">paper</a>.
+                              If you feel very brave you could keep going <a href="landing.html">up</a> and try and get out 
+                              of the back door.  Or you could turn around and head back<a href="stairs7.html">down</a> the way you came.
                         </div>
                     </div>
                     <div class="inventory">
