--- a/landing.html
+++ b/landing.html
@@ -10,7 +10,7 @@
   <body>
     <three60>
         <a-scene xr-mode-ui="enabled: false">
-            <a-sky src="./images/stairs11.jpg" rotation="0 -90 0"></a-sky>
+            <a-sky src="./images/landing.jpg" rotation="0 -90 0"></a-sky>
 
             <div class="flexb">
                 <div class="menu">        
