--- a/stairs11.html
+++ b/stairs11.html
@@ -45,7 +45,7 @@
                             It is dark back there and there is definately something moving in the corner.  You feel the hairs 
                             on your arms stand on end.  On the floor there is a piece of <a href="index.html">paper</a>.
                               If you feel very brave you could keep going <a href="landing.html">up</a> and try and get out 
-                              of the back door.  Or you could turn around and head back<a href="stairs7.html">down</a> the way you came.
+                              of the back exit.  Or you could turn around and head back <a href="stairs7.html">down</a> the way you came.
                         </div>
                     </div>
                     <div class="inventory">
