--- a/lectureUp.html
+++ b/lectureUp.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="360style.css">
   </head>
   <body>
+    <div class="blackin"></div>
     <three60>
         <a-scene xr-mode-ui="enabled: false">
             <a-sky src="./images/lectureUp.jpg" rotation="0 -90 0"></a-sky>
