--- a/awake.html
+++ b/awake.html
@@ -9,6 +9,7 @@
   <body>
     <audio id="awakening" src="audio/awakening.mp3" type="audio/mp3" autoplay="autoplay"></audio>
     <div class="fadefromblack"></div>
+    <div class="info">Information goes here</div>
     <three60>
         <a-scene xr-mode-ui="enabled: false">
             <a-sky src="./images/awakecarpet.jpg" rotation="0 -90 0"></a-sky>
