added video playing check

--- a/lecture.html
+++ b/lecture.html
@@ -15,5 +15,6 @@
             window.location.href="awake.html";
         }
     </script>
+    <script src="utility.js"></script>
 </body>
 </html>
