--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
     <script>
         localStorage.Clear();
         //Set localStorage from JSON start position file
-        document.documentElement.requestFullscreen();
-        localStorage.setItem('fullscreen', 1);
-
+        //document.documentElement.requestFullscreen();
+        //localStorage.setItem('fullscreen', 1);
+        localStorage.setItem("gametime", "13:10");
+        localStorage.setItem("inventory", "{'slot1':'empty', 'slot2':'empty', 'slot3':'empty'}");
+        localStorage.setItem("lastthought", "empty");
     </script>
     <style>
         body, html{
