--- a/awake.html
+++ b/awake.html
@@ -5,17 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
     <link rel="stylesheet" href="360style.css">
-    <script>
-        //Check localstorage before the DOMContent has loaded and make changes to content
-        //var isFullScreen = localStorage.getItem('fullscreen');
-        //if (isFullScreen === 1) {
-        //    document.documentElement.requestFullscreen();
-        //}
-        var lastthing = localStorage.getItem("lastthought");
-        alert(lastthing);
-        document.getElementById("infobox").innerHTML = lastthing;
-        localStorage.setItem("lastthought", "");
-    </script>
   </head>
   <body>
     <audio id="awakening" src="audio/awakening.mp3" type="audio/mp3" autoplay="autoplay"></audio>
@@ -29,7 +18,7 @@
                     <h3>Hamburger</h3>
                 </div>
                 <div class="content">
-                    <div id="infobox" class="info">Information goes here</div>
+                    <div id="infobox" class="info">lastthing</div>
                     <div><p id="innervoice"></p></div>
                 </div>
                 <div class="base">
