--- a/landing.html
+++ b/landing.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class=""a-fullscreen">
+<html class="a-fullscreen">
   <head>
     <title>deadLINE</title>
     <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
@@ -57,6 +57,6 @@
     setTimeout(function(){
         window.location="awake.html";
     }, 5000)
-  </script>   
+  </script>  
   </body>
 </html>
