--- a/awake.html
+++ b/awake.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class=""a-fullscreen">
+<html class="a-fullscreen">
   <head>
     <title>deadLINE</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -52,10 +52,10 @@
                     <div class="inventory">
                         Empty Empty Empty
                     </div>                    
-                </div>    
+                </div>
             </div> 
         </a-scene>
-    </three60>  
+    </three60>
     <script src="logic.js"></script>    
     <script src="utility.js"></script>
     <script>window.onload = function() {
