--- a/stairs11.html
+++ b/stairs11.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class=""a-fullscreen">
+<html class="a-fullscreen">
   <head>
     <title>deadLINE</title>
     <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
