InnerVoice and navigation

--- a/awake.html
+++ b/awake.html
@@ -19,7 +19,7 @@
                 </div>
                 <div class="content">
                     <div id="infobox" class="info">lastthing</div>
-                    <div><p id="innervoice"></p></div>
+                    p><div><p id="innervoice"></p>[</div>
                 </div>
                 <div class="base">
                     <div class="grid-compass">
@@ -30,9 +30,9 @@
                         <button id="UP" class="compassbtn">UP</button>
                         <!--Second row-->
                         <button id="W" class="compassbtn">W</button>
-                        <button id="INV" class="compassbtn">INV</button>
+                        <button id="USE" class="compassbtn">USE</button>
                         <button id="E" class="compassbtn">E</button>
-                        <button id="BACK" class="compassbtn">BACK</button>
+                        <button id="LOOK" class="compassbtn">LOOK</button>
                         <!--Third row-->
                         <button id="SW" class="compassbtn">SW</button>
                         <button id="S" class="compassbtn">S</button> 
