--- a/awake.html
+++ b/awake.html
@@ -19,7 +19,7 @@
                 </div>
                 <div class="content">
                     <div id="infobox" class="info">lastthing</div>
-                    p><div><p id="innervoice"></p>[</div>
+                    p><div><p id="innervoice"></p></div>
                 </div>
                 <div class="base">
                     <div class="grid-compass">
