--- a/awake.html
+++ b/awake.html
@@ -14,46 +14,53 @@
             <a-sky src="./images/awakecarpet.jpg" rotation="0 -90 0"></a-sky>
 
             <div class="flexb">
-                <div class="menu">        
-                    <h3>Hamburger</h3>
-                </div>
+                <header class="header">
+                    <div class="time">13:10</div>
+                    <div class="menu">        
+                        <div class="barburger">
+                            <div class="bar1"></div>
+                            <div class="bar2"></div>
+                            <div class="bar3"></div>
+                        </div>
+                    </div>
+                </header>
                 <div class="content">
                     <div id="infobox" class="info">lastthing</div>
                     p><div><p id="innervoice"></p></div>
                 </div>
-                <div class="base">
-                    <div class="grid-compass">
-                        <!--First row-->
-                        <button id="NW" class="compassbtn">NW</button>
-                        <button id="N" class="compassbtn">N</button>
-                        <button id="NE" class="compassbtn">NE</button>
-                        <button id="UP" class="compassbtn">UP</button>
-                        <!--Second row-->
-                        <button id="W" class="compassbtn">W</button>
-                        <button id="USE" class="compassbtn">USE</button>
-                        <button id="E" class="compassbtn">E</button>
-                        <button id="LOOK" class="compassbtn">LOOK</button>
-                        <!--Third row-->
-                        <button id="SW" class="compassbtn">SW</button>
-                        <button id="S" class="compassbtn">S</button> 
-                        <button id="SE" class="compassbtn">SE</button>
-                        <button id="DOWN" class="compassbtn">DOWN</button> 
+                <div class="descriptive" id="info">
+                    <div class="descriptive" id="title">
+                        Lecture seats
                     </div>
-                    <div class="descriptive" id="info">
-                        <div class="descriptive" id="title">
-                            Lecture seats
-                        </div>
-                        <div class="descriptive" id="description">
-                            Opening your eyes you find yourself lying on the floor of the dimly lit lecture theatre.  
-                            You have no idea what time it is or how long you have remaining to submit your coursework. 
-                            Go back to <a href='index.html'>sleep</a> or get <a class='activateBtn' data-target='UP' href='#''>up</a>
-                        </div>
+                    <div class="descriptive" id="description">
+                        Opening your eyes you find yourself lying on the floor of the dimly lit lecture theatre.  
+                        You have no idea what time it is or how long you have remaining to submit your coursework. 
+                        Go back to <a href='index.html'>sleep</a> or get <a class='activateBtn' data-target='UP' href='#''>up</a>
                     </div>
-                    <div class="inventory">
-                        Empty Empty Empty
-                    </div>                    
+                </div>                
+            </div>
+            <div class="base">
+                <div class="grid-compass">
+                    <!--First row-->
+                    <button id="NW" class="compassbtn">NW</button>
+                    <button id="N" class="compassbtn">N</button>
+                    <button id="NE" class="compassbtn">NE</button>
+                    <button id="UP" class="compassbtn">UP</button>
+                    <!--Second row-->
+                    <button id="W" class="compassbtn">W</button>
+                    <button id="USE" class="compassbtn">USE</button>
+                    <button id="E" class="compassbtn">E</button>
+                    <button id="LOOK" class="compassbtn">LOOK</button>
+                    <!--Third row-->
+                    <button id="SW" class="compassbtn">SW</button>
+                    <button id="S" class="compassbtn">S</button> 
+                    <button id="SE" class="compassbtn">SE</button>
+                    <button id="DOWN" class="compassbtn">DOWN</button> 
                 </div>
-            </div> 
+                <div class="inventory">
+                    Empty Empty Empty
+                </div>                    
+            </div>
         </a-scene>
     </three60>
     <script src="logic.js"></script>    
@@ -62,4 +69,5 @@
         document.getElementById("awakening").play();
     }</script>
   </body>
+
 </html>
