--- a/lecture.html
+++ b/lecture.html
@@ -5,18 +5,39 @@
     <link rel="stylesheet" href="360style.css">
 </head>
 <body>
-    <div class="info" style="display: none;">Play video</div>
-    <div class="videoplay" style="display: block;">
+    <!--<div class="info" style="display: none;">Play video</div>
+    <div class="videoplay" style="display: block;">-->
+    <div id="inf" class="info" style="display: none">Play video</div>
+    <div id="vidplay" class="videoplay">
         <video id="lecture" autoplay="autoplay">
             <source src="video/lecture_blur.mp4" type="video/mp4">
             If you see this your browser does not support the video tag.  You will miss your deadLINE.
         </video>
     </div>    
     <script type="text/javascript">
-        document.getElementById("lecture").addEventListener("ended", endHandler, false);
+        const thisvideo = document.getElementById('lecture');
+        thisvideo.addEventListener("ended", endHandler, false);
+
+        //Check if th evideo has ended
+        //document.getElementById("lecture").addEventListener("ended", endHandler, false);
         function endHandler(e) {
             window.location.href="awake.html";
         }
+
+        //Auto play check to see if it is running
+        setTimeout(() => {
+        if (thisvideo.paused) {
+            //Show the checkin accept box;
+            //When the button is clicked start the video;
+            alert('No play');
+            document.getElementById("vidplay").style.display: n;
+            document.getElementById("inf").style.display = "block";
+        } else { //all good
+            //alert('play');
+            document.getElementById('info').style.display = "none";
+        }
+    }, 2000);
+
     </script>
     <script src="utility.js"></script>
 </body>
