opening sequence changed
Video autoplay was not running.  Now changed to start the video when checkin clicked

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div class="modalish"></div>
     <div class="backimg">
         <div id="lectures" class="infoimage" onclick="location.href='lecture.html'">
-            <img src="./images/CheckIn20240426.png" alt="Student check in screen">
+            <img src="./images/CheckInWebTechNoCode.png" alt="Student check in screen">
         </div>
     </div>
   <script src="utility.js"></script>    
