--- a/stairs11.html
+++ b/stairs11.html
@@ -22,20 +22,20 @@
                 <div class="base">
                     <div class="grid-compass">
                         <!--First row-->
-                        <button class="compassbtn" id="NW" type="submit">NW</button>
-                        <button class="compassbtn" id="N" type="submit">N</button>
-                        <button class="compassbtn" id="NE" type="submit">NE</button>
-                        <button class="compassbtn" id="UP" type="submit">UP</button>
+                        <button id="NW" class="compassbtn">NW</button>
+                        <button id="N" class="compassbtn">N</button>
+                        <button id="NE" class="compassbtn">NE</button>
+                        <button id="UP" class="compassbtn">UP</button>
                         <!--Second row-->
-                        <button class="compassbtn" id="W" type="submit">W</button>
-                        <button class="compassbtn" id="BACK" type="submit">BACK</button>
-                        <button class="compassbtn" id="E" type="submit">E</button>
-                        <button class="compassbtn" id="SEARCH" type="submit">SEARCH</button>
+                        <button id="W" class="compassbtn">W</button>
+                        <button id="USE" class="compassbtn">USE</button>
+                        <button id="E" class="compassbtn">E</button>
+                        <button id="LOOK" class="compassbtn">LOOK</button>
                         <!--Third row-->
-                        <button class="compassbtn" id="SW" type="submit">SW</button>
-                        <button class="compassbtn" id="S" type="submit">S</button> 
-                        <button class="compassbtn" id="SE" type="submit">SE</button>
-                        <button class="compassbtn" id="DOWN" type="submit">DOWN</button> 
+                        <button id="SW" class="compassbtn">SW</button>
+                        <button id="S" class="compassbtn">S</button> 
+                        <button id="SE" class="compassbtn">SE</button>
+                        <button id="DOWN" class="compassbtn">DOWN</button> 
                     </div>
                     <div class="descriptive" id="info">
                         <div class="descriptive" id="title">
