--- a/awake.html
+++ b/awake.html
@@ -26,7 +26,7 @@
                     </header>
                     <div class="content">
                         <div id="infobox" class="info">lastthing</div>
-                        p><div><p id="innervoice"></p></div>
+                        <div><p id="innervoice"></p></div>
                     </div>
                     <div class="descriptive" id="info">
                         <div class="descriptive" id="title">
