--- a/lectureUp.html
+++ b/lectureUp.html
@@ -18,6 +18,17 @@
                 <div class="content">
                     <!--<div id="menu" style="position: fixed; top: 0; left:0; right: 0; background: rgba(30, 30, 30, 0.2); padding: 10px">-->
                 </div>
+                <div class="descriptive" id="info">
+                    <div class="descriptive" id="title">
+                        Lecture seats
+                    </div>
+                    <div class="descriptive" id="description">
+                        Everyone has gone, your laptop has gone, silence.  Why did they leave me?  Standing in the semi dark,
+                         the main lights off, it is hard to see properly but the stairs to your <a class='activateBtn' data-target='E' href='#'>east</a> go 
+                         <a class='activateBtn' data-target='UP' href='#'>up</a> and <a class='activateBtn' data-target='DOWN' href='#'>down</a>.  There are dark rows of seating all around
+                           and the side lighting makes everything look a bit eerie, especially the massive air conditioning ducts above your head.
+                    </div>
+                </div>                
                 <div class="base">
                     <div class="grid-compass">
                         <!--First row-->
@@ -35,17 +46,6 @@
                         <button id="S" class="compassbtn">S</button> 
                         <button id="SE" class="compassbtn">SE</button>
                         <button id="DOWN" class="compassbtn">DOWN</button> 
-                    </div>
-                    <div class="descriptive" id="info">
-                        <div class="descriptive" id="title">
-                            Lecture seats
-                        </div>
-                        <div class="descriptive" id="description">
-                            Everyone has gone, your laptop has gone, silence.  Why did they leave me?  Standing in the semi dark,
-                             the main lights off, it is hard to see properly but the stairs to your <a href="stairs7.html">east</a> go 
-                             <a href="stairs11.html">up</a> and <a href="stairs3.html">down</a>.  There are dark rows of seating all around
-                               and the side lighting makes everything look a bit eerie, especially the massive air conditioning ducts above your head.
-                        </div>
                     </div>
                     <div class="inventory">
                         Empty Empty Empty
