Set menu background to transparent

--- a/awake.html
+++ b/awake.html
@@ -32,7 +32,7 @@
             </div>
             <div id="infospace" class="flex-container">
                 <div class="content">
-                    <div id="infobox" class="info">lastthing</div>
+                    <div id="infobox" class="info"></div>
                     <!--<div><p id="innervoice"></p></div>-->
                 </div>
                 <footer class="base">
