--- a/awake.html
+++ b/awake.html
@@ -15,7 +15,7 @@
             <header id="header" class="header">
                 <div class="time">13:10</div>
                 <div class="menu">        
-                    <div class="barburger">
+                    <div class="barburger" style="display: none;">
                         <div class="bar1"></div>
                         <div class="bar2"></div>
                         <div class="bar3"></div>
@@ -32,7 +32,7 @@
             </div>
             <div id="infospace" class="flex-container">
                 <div class="content">
-                    <div id="infobox" class="info"></div>
+                    <div id="infobox" class="info" style="display: none;"></div>
                     <!--<div><p id="innervoice"></p></div>-->
                 </div>
                 <footer class="base">
